update: added readme file

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Aufgaben:
 
 - Erstellen einer Function die die HTML Struktur der Ausgabe beinhaltet
 - Erstellen einer Function die das gesamte Array durchläuft, zufällig ein einziges Objekt daraus in HTML ausgib und die Ausgabe beim klick auf eine der Antwortmöglichkeiten leert und diese mit der neuen Frage füllt.
-- erstellen einer setAnswer() function die bei klick auf eine Auswahl diese entweder rot färbt für falsche Antwort oder grün für richtige antwort.
+- erstellen einer selectAnswer() function die bei klick auf eine Auswahl diese entweder rot färbt für falsche Antwort oder grün für richtige antwort.
 - erstellen einer function countScore() function die den #score oder das Geld hochrechnet
 - erstellen einer function setDownFailedAttempts() die dei Fehlversuche herabsetzt. 
 - erstellen eines showResultModal() welches entweder die Erfolgsmeldung anzeigt oder die Losemeldung
